
{{$NEXT}}

    - Callbacks no longer cause crash due to bad ref counts
    - New widgets:
        - Fl::CheckButton - a button with a checkbox
        - Fl::LightButton - a button with a light to indicate 'on' vs 'off'
        - Fl::ReturnButton - triggers callback when Enter key is pressed
        - Fl::RepeatButton - repeatedly triggers callback as long as it's held down
        - Fl::RadioButton - looks like a radio button and acts like one too
        - Fl::RoundButton - looks like a radio button but behaves like a traditional button

0.99.4 2016-05-06T02:02:22Z

    - New widget: Fl::Button
    - Incomplete callback system for widgets (strong refs cause crash)
    - New export tags/values (get them all with :enum, of course):
        - :when - Callback trigger conditions
        - :button - Fl::Button types (normal, toggle, radio)
        - :keyboard - Event and state types for keyboard keys
        - :mouse - Event and state values for mouse buttons
    - Forgot to update eg/synopsis.pl to new :event tag in v0.99.2

0.99.3 2016-05-02T20:19:14Z

    - Require Alien::FLTK during configure because some smokers ignore runtime prereqs

0.99.2 2016-05-02T02:57:53Z

    - New widget: Fl::Chart
    - New demo script: eg/chart.pl
    - New export values found in Fl::Enumerations
        - Fl_Chart types exported with :chart tag
    - New utility functions and values found in Fl::Color
        - Import them with the :color tag
    - Event loop functions are now documented in Fl::Event and imported with the :event tag

0.99.1 2016-04-27T22:11:14Z

    - FLTK.pm now has a $VERSION
    - New export values found in Fl::Enumerations
        - Fl_Label types exported with :label tag
        - FL_MAJOR_VERSION, FL_MINOR_VERSION, FL_PATCH_VERSION, FL_VERSION exported with :version tag
        - Fl_Boxtype types exported with :box tag
    - We don't need to link with internal image or gl libs on most systems
    - New Widgets: Fl::Window, Fl::Box, Fl::Group
