@@ -65,6 +65,6 @@
          "web" : "https://github.com/sanko/Fl.pm"
       }
    },
-   "version" : "0.99.4",
+   "version" : "0.99.5",
    "x_serialization_backend" : "JSON::PP version 2.27300"
 }
