@@ -74,6 +74,9 @@ Fl contains several widgets and other classes including:
 - [Fl::RepeatButton](https://metacpan.org/pod/Fl::RepeatButton)
 - [Fl::RoundButton](https://metacpan.org/pod/Fl::RoundButton)
 - [Fl::RadioButton](https://metacpan.org/pod/Fl::RadioButton)
+- [Fl::RadioRoundButton](https://metacpan.org/pod/Fl::RadioRoundButton)
+- [Fl::RadioLightButton](https://metacpan.org/pod/Fl::RadioLightButton)
+- [Fl::ToggleButton](https://metacpan.org/pod/Fl::ToggleButton)
 - [Fl::Chart](https://metacpan.org/pod/Fl::Chart)
 - [Fl::Group](https://metacpan.org/pod/Fl::Group)
 - [Fl::Window](https://metacpan.org/pod/Fl::Window)
