@@ -2,7 +2,7 @@
 
 =head1 NAME
 
-Fl::RadioButton - Button that Turns Siblings Off
+Fl::RadioLightButton - Button that Turns Siblings Off
 
 =head1 Synopsis
 
@@ -14,19 +14,19 @@ Fl::RadioButton - Button that Turns Siblings Off
 
 You're probably looking for L<Fl::RadioRoundButton>.
 
-The Fl::RadioButton class represents a button that, when turned on, turns off
-all other buttons in the same group. It looks like a normal button though.
+The Fl::RadioLightButton class represents a button that looks like a radio
+button.
 
 =head1 Methods
 
-Fl::RadioButton inherits from Fl::Button and Fl::Widget. On top of that, it
-exposes the following methods...
+Fl::RadioButton inherits from Fl::LightButton and Fl::Widget. On top of that,
+it exposes the following methods...
 
 =cut
 
-#include <FL/Fl_Radio_Button.H>
+#include <FL/Fl_Radio_Light_Button.H>
 
-MODULE = Fl::RadioButton        PACKAGE = Fl::RadioButton         PREFIX = Fl_
+MODULE = Fl::RadioLightButton     PACKAGE = Fl::RadioLightButton  PREFIX = Fl_
 
 PROTOTYPES: DISABLE
 
@@ -34,8 +34,8 @@ PROTOTYPES: DISABLE
 
 =head2 new(...)
 
-    my $button_a = Fl::RadioButton->new(0, 0, 250, 500, 'Important Stuff');
-    my $button_b = Fl::RadioButton->new(0, 0, 250, 500);
+    my $button_a = Fl::RadioLightButton->new(0, 0, 250, 500, 'Important Stuff');
+    my $button_b = Fl::RadioLightButton->new(0, 0, 250, 500);
 
 The constructor creates a new button using the given position, size, and
 label.
@@ -44,8 +44,8 @@ The destructor removes the button.
 
 =cut
 
-Fl_Radio_Button *
-Fl_Radio_Button::new( ... )
+Fl_Radio_Light_Button *
+Fl_Radio_Light_Button::new( ... )
     CASE: (items == 5 || items == 6)
         CODE:
             /*(int x, int y, int w, int h, char * label = $0)*/
@@ -55,12 +55,12 @@ Fl_Radio_Button::new( ... )
             int w = (int)SvIV(ST(3));
             int h = (int)SvIV(ST(4));
             if (items == 6) label = (char *)SvPV_nolen(ST(5));
-            RETVAL = new Fl_Radio_Button(x,y,w,h,label);
+            RETVAL = new Fl_Radio_Light_Button(x,y,w,h,label);
         OUTPUT:
             RETVAL
 
 void
-Fl_Radio_Button::DESTROY()
+Fl_Radio_Light_Button::DESTROY()
     CODE:
         int refcount = SvREFCNT(SvRV(ST(0)));
         if (refcount == 1) {
@@ -73,7 +73,7 @@ Fl_Radio_Button::DESTROY()
 MODULE = Fl        PACKAGE = Fl
 
 BOOT:
-    set_isa("Fl::RadioButton", "Fl::Button");
+    set_isa("Fl::RadioLightButton", "Fl::LightButton");
 
 =pod
 
