@@ -2,20 +2,20 @@
 
 =head1 NAME
 
-Fl::RadioButton - Button that Turns Siblings Off
+Fl::ToggleButton - Button that Toggles On and Off
 
 =head1 Synopsis
 
     use Fl;
-    my $button = Fl::RadioButton->new(0, 0, 100, 200, 'Hello, World!');
+    my $button = Fl::ToggleButton->new(0, 0, 100, 200, 'Hello, World!');
     $button->callback(sub {print q[It's dat boi]} );
 
 =head1 Description
 
-You're probably looking for L<Fl::RadioRoundButton>.
+The Fl::ToggleButton class represents a button that needs to be clicked once
+to toggle on and once more to toggle off.
 
-The Fl::RadioButton class represents a button that, when turned on, turns off
-all other buttons in the same group. It looks like a normal button though.
+The toggle button shows the "ON" state by drawing a pushed-in button.
 
 =head1 Methods
 
@@ -24,9 +24,9 @@ exposes the following methods...
 
 =cut
 
-#include <FL/Fl_Radio_Button.H>
+#include <FL/Fl_Toggle_Button.H>
 
-MODULE = Fl::RadioButton        PACKAGE = Fl::RadioButton         PREFIX = Fl_
+MODULE = Fl::ToggleButton     PACKAGE = Fl::ToggleButton  PREFIX = Fl_
 
 PROTOTYPES: DISABLE
 
@@ -34,18 +34,20 @@ PROTOTYPES: DISABLE
 
 =head2 new(...)
 
-    my $button_a = Fl::RadioButton->new(0, 0, 250, 500, 'Important Stuff');
-    my $button_b = Fl::RadioButton->new(0, 0, 250, 500);
+    my $button_a = Fl::ToggleButton->new(0, 0, 250, 500, 'Important Stuff');
+    my $button_b = Fl::ToggleButton->new(0, 0, 250, 500);
 
 The constructor creates a new button using the given position, size, and
 label.
+
+The button's C<type()> is set to FL_TOGGLE_BUTTON by default.
 
 The destructor removes the button.
 
 =cut
 
-Fl_Radio_Button *
-Fl_Radio_Button::new( ... )
+Fl_Toggle_Button *
+Fl_Toggle_Button::new( ... )
     CASE: (items == 5 || items == 6)
         CODE:
             /*(int x, int y, int w, int h, char * label = $0)*/
@@ -55,12 +57,12 @@ Fl_Radio_Button::new( ... )
             int w = (int)SvIV(ST(3));
             int h = (int)SvIV(ST(4));
             if (items == 6) label = (char *)SvPV_nolen(ST(5));
-            RETVAL = new Fl_Radio_Button(x,y,w,h,label);
+            RETVAL = new Fl_Toggle_Button(x,y,w,h,label);
         OUTPUT:
             RETVAL
 
 void
-Fl_Radio_Button::DESTROY()
+Fl_Toggle_Button::DESTROY()
     CODE:
         int refcount = SvREFCNT(SvRV(ST(0)));
         if (refcount == 1) {
@@ -73,7 +75,7 @@ Fl_Radio_Button::DESTROY()
 MODULE = Fl        PACKAGE = Fl
 
 BOOT:
-    set_isa("Fl::RadioButton", "Fl::Button");
+    set_isa("Fl::ToggleButton", "Fl::Button");
 
 =pod
 
